--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,7 +22,7 @@
                 <table>
                     <tr>
                         <td>
-                            <p><input type="email" name="email" placeholder="Your Email" value="johndoe@gmail.com"></p>
+                            <p><input type="email" name="email" placeholder="Your Email" value="rmalem@kadence.com"></p>
                             <p><input type="password" name="password" placeholder="Your password" value="kadencexnissan"></p>
                             <p><input type="submit" value="Login" class="myButton-flat-green"></p>
                         </td>
