--- a/views/updatereport.ejs
+++ b/views/updatereport.ejs
@@ -24,19 +24,19 @@
 		</div>
 		<div class="mainbox size-std column">
 			<div class="title-content size-std" style="background-color: #68baf9; width: 100%; padding: 10px 10px; margin: 10px 5px; color: #ffffff;">
-				DASHBOARD > Report > Upload
+				DASHBOARD > Report > Update - <%= detaildata.filename %>
             </div>
             <div class="cols-12 column containt" style="margin: 10px 0; background-color: #ffffff;">
                 <div class="headtitle trans">
                     <p class="nopad size-head4" style="padding: 5px 15px; position: relative;">
-                        Upload Services Files
+                        Update <%= detaildata.panel %> Report
                     </p>
                     <ul class="tab-image-setting nopad">
                         <li><img src="<%= baseurl() %>images/icon/arrow-up.png" class="btn-tab-toggle delay" href="assigntome"></li>
                     </ul>
                 </div>
                 <div class="cols-12" style="padding: 35px 0;">
-                    <form ref='uploadForm' action="/report/save" method="POST" enctype="multipart/form-data">
+                    <form ref='uploadForm' action="/report/saveupdate/<%= detaildata.idfile %>/<%= detaildata.filename %>/<%= detaildata.panel %>" method="POST" enctype="multipart/form-data">
                             <table style="width: 100%; height: 100%;" cellspacing="5"cellpadding="5">
                                 <tr>
                                     <td style="text-align: center; border: 1px dashed #00aaab; height: 400px;">
@@ -47,22 +47,9 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <select name="week" id="" required>
-                                        <% for(var i=1;i<=10;i++){ %>
-                                            <option value="<%= i %>">Week <%= i %></option>
-                                        <% }%>
-                                        </select>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
                                         <div class="radiotype1">
-                                            <input type="radio" id="radio01" name="panel" value="CSI">
-                                            <label for="radio01" id="chartline"><span></span>CSI</label>
-                                        </div>
-                                        <div class="radiotype1">
-                                            <input type="radio" id="radio02" name="panel" value="SSI">
-                                            <label for="radio02" id="chartline"><span></span>SSI</label>
+                                            <input type="radio" id="radio01" name="panel" value="<%= detaildata.panel %>" checked>
+                                            <label for="radio01" id="chartline"><span></span><%= detaildata.panel %></label>
                                         </div>
                                     </td>
                                 </tr>
