--- a/views/createuser.ejs
+++ b/views/createuser.ejs
@@ -87,7 +87,7 @@
     function showDealer(){
         var type = $('#type_user').val()
         $('#dealer').hide()
-        if(type=="sales"){
+        if(type=="sales" || type=="admin"){
             $('#dealer').show()
         }
     }
