--- a/views/detailservice.ejs
+++ b/views/detailservice.ejs
@@ -95,7 +95,7 @@
                             <table style="height: 100%; width: 100%; color: #959a9c;">
                                 <tr>
                                     <td>
-                                        <a href="<%= baseurl() %>filexls/fix/<%= files[0].filename_exceldlv %>">
+                                        <a href="<%= baseurl() %>filexls/fix/<%= files[0].filename_excelsrv %>">
                                             <img src="<%= baseurl() %>images/icon/download-xlsx.png" alt="Download File" title="Download file <%= files[0].filename_exceldlv %>" style="width: 55%; vertical-align: middle;">
                                             <br><br>
                                             <b>Download File</b>
