config antara CSI dan SSI

--- a/views/detailservice.ejs
+++ b/views/detailservice.ejs
@@ -48,7 +48,7 @@
 		</div>
 		<div class="mainbox size-std column">
 			<div class="title-content size-std" style="background-color: #68baf9; width: 100%; padding: 10px 10px; margin: 10px 5px; color: #ffffff;">
-				DASHBOARD > Service - <%= login.nameses %>
+				<a href="<%= baseurl() %>">DASHBOARD</a> > <a href="<%= baseurl() %>service">Service</a> > <%= files[0].filename_excelsrv %>
             </div>
             <div class="containt spccols-6 spc-tb">
                 <table class="full-length padding-tab size-head4">
