--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
 		</div>
 		<div class="mainbox size-std column">
 			<div class="title-content size-std">
-				DASHBOARD - <%= login.nameses+" - "+login.iddealer %>
+				DASHBOARD - <%= login.nameses+" - "+login.typeses %>
 			</div>
 			<div class="top-info column">
 				<div class="containt top-info-box shadow half delay" style="background: #68baf9;">
