--- a/views/delivery.ejs
+++ b/views/delivery.ejs
@@ -21,11 +21,18 @@
 		</div>
 		<div class="mainbox size-std column">
 			<div class="title-content size-std" style="background-color: #68baf9; width: 100%; padding: 10px 10px; margin: 10px 5px; color: #ffffff;">
-				DASHBOARD > Delivery - <%= login.nameses %>
+				<a href="<%= baseurl() %>">DASHBOARD</a> > Delivery
             </div>
             <div class="cols-12 column containt" style="margin: 10px 0; background-color: #ffffff;">
 				<div class="headtitle trans" style="margin-bottom: 0;">
 					<p class="size-head4 nopad">Delivery FIles</p>
+					<ul class="tab-image-setting nopad">
+						<li>
+							<a href="<%= baseurl() %>delivery/upload">
+								<img src="<%= baseurl() %>images/icon/plus.png" class="btn-tab-toggle delay">
+							</a>
+						</li>
+					</ul>
 				</div>
 				<div class="list-control">
 					<div class="list-control-box">
@@ -41,20 +48,39 @@
 							</ul>
 						</div>
 					</div>	
-					<div class="valchecked"></div>  
+					<div class="list-control-box">
+						<button class="option-click btn-list-control size-std" href="#list-control-sort">
+							Sort By :&nbsp; ID 
+							<img src="<%= baseurl() %>images/icon/arrow-down.png" class="icon-list-control">
+						</button>
+						<div class="option-box option-menu shadow half box-list-control" id="list-control-sort">
+							<ul class="full-length nopad">
+								<a href=""><li class="pad-tb size-std">ID</li></a>
+								<a href=""><li class="pad-tb size-std">Updated</li></a>
+								<a href=""><li class="pad-tb size-std">Popular</li></a>
+								<a href=""><li class="pad-tb size-std">Most View</li></a>
+							</ul>
+						</div>
+					</div>				
+					<div class="list-control-box" style="float: right;">
+						<table>
+							<tr>
+								<td>
+									<label for="" class="right-icon">
+										<input type="search">
+										<img src="<%= baseurl() %>images/icon/search1.png" alt="">
+									</label>
+								</td>
+							</tr>
+						</table>
+					</div>
 				</div>
 				<div class="full-length" style="overflow-x: auto; padding-bottom: 40px;">
 					<form id="count-checked">
 						<table class="size-std full-tables">
 							<tr>
-								<th>
-									<div class="checkboxtype1">
-									 <input type="checkbox" id="selectall" name="radio" />
-									 <label for="selectall" id="chartd"><span></span></label>
-									</div>
-								</th>
 								<th style="text-align: left; padding: 8px; width: 100px;">Dealer</th>
-								<th style="text-align: left;">Nama Sales</th>
+								<th style="text-align: left;">Name FIle</th>
 								<th>Type</th>
 								<th>Tanggal Upload</th>
 								<th>Update</th>
@@ -69,14 +95,8 @@
 									}
 								%>
                                 <tr>
-                                    <td>
-										<div class="checkboxtype1">
-											<input type="checkbox" id="radio<%= show.id_exceldlv %>" name="radio" class="select cnt-chk"/>
-											<label for="radio<%= show.id_exceldlv %>" id="chartd"><span></span></label>
-										</div>
-									</td>
                                     <td><%= res.id_dealer %></td>
-									<td><%= res.sales_name %></td>
+									<td><%= res.filename_exceldlv %></td>
 									<td align="center"><%= type %></td>
 									<td align="center"><%= moment(res.upload_exceldlv).format("DD-MMM-YYYY") %></td>
 									<td align="center"><%= moment(res.update_exceldlv).fromNow() %></td>
@@ -86,7 +106,18 @@
                         </table>
 					</form>
 					<div class="size-std numberofrows">
-						Show 20 of 150
+						<ul class="pagination">
+							<% 
+							for(var i=1;i<=count;i++){ 
+								if(i==1){
+									var classes = "active"
+								}else{
+									var classes = ""
+								}
+							%>
+								<li class="<%= classes %>"><a href="<%= baseurl() %>delivery/page/<%= i %>"><%= i %></a></li>
+							<% } %>
+						</ul>
 					</div>
 				</div>
 			</div>
