--- a/views/detaildelivery.ejs
+++ b/views/detaildelivery.ejs
@@ -33,10 +33,6 @@
             </tr>
         </table>
     </div>
-    <!-- <div class="popupBtn">
-        <a href="" class="myButton-gradBlueGreen size-std"></a>
-        <a href="" class="myButton-white size-std"></a>
-    </div> -->
 </div>
 <div class="wrapper">
     <div class="lSide">
@@ -48,7 +44,7 @@
 		</div>
 		<div class="mainbox size-std column">
 			<div class="title-content size-std" style="background-color: #68baf9; width: 100%; padding: 10px 10px; margin: 10px 5px; color: #ffffff;">
-				DASHBOARD > Delivery - <%= login.nameses %>
+				<a href="<%= baseurl() %>">DASHBOARD</a> > <a href="<%= baseurl() %>delivery">Delivery</a> - <%= files[0].filename_exceldlv %>
             </div>
             <div class="containt spccols-6 spc-tb">
                 <table class="full-length padding-tab size-head4">
@@ -185,11 +181,60 @@
                         </table>
 					</form>
 					<div class="size-std numberofrows">
-                        <!-- <input type="submit" name="updpayment" value="Save Permanent" class="myButton-gradBlueGreen"> -->
-                        <% if(files[0].type_exceldlv=="0"){ %>
+                        <ul class="pagination nopad">
+                            <% 
+                            if(count>7){ 
+                                if(count==page){
+                                    var lastclass = "active"
+                                }else{
+                                    var lastclass = ""
+                                }
+                            } 
+                            %>
+                            <% if(page>=6){ %>
+                                <li class="<%= lastclass %>"><a href="<%= baseurl() %>delivery/detail/<%= files[0].id_exceldlv%>?page=1"><%= 1 %></a></li>
+                                <li class="<%= classes %>"><a href="<%= baseurl() %>delivery/detail/<%= files[0].id_exceldlv%>?page=<%= lastarray %>">...</a></li>
+                            <% } 
+                            if(count>7){
+                                var pagelength = 7
+                            }else{
+                                var pagelength = count
+                            }
+                            var len = arrpage.length
+                            var lastarray = arrpage[6]+1
+                            for(var i=0;i < arrpage.length;i++){ 
+                                if(page==arrpage[i]){
+                                    var classes = "active"
+                                }else{
+                                    var classes = ""
+                                }
+                                if(page==0){
+                                    if(arrpage[i]==1){
+                                        var classes = "active"
+                                    }
+                                }
+                            %>
+                                <li class="<%= classes %>"><a href="<%= baseurl() %>delivery/detail/<%= files[0].id_exceldlv%>?page=<%= arrpage[i] %>"><%= arrpage[i] %></a></li>
+                            <% }
+                            if(page<=count-5 && count > 7){ %>
+                                <li class="<%= classes %>"><a href="<%= baseurl() %>delivery/detail/<%= files[0].id_exceldlv%>?page=<%= lastarray %>">...</a></li>
+                            <% } 
+                            if(count>7){ 
+                                if(count==page){
+                                    var lastclass = "active"
+                                }else{
+                                    var lastclass = ""
+                                }
+                            %>
+                            <li class="<%= lastclass %>"><a href="<%= baseurl() %>delivery/detail/<%= files[0].id_exceldlv%>?page=<%= count %>"><%= count %></a></li>
+                            <% } %>
+                        </ul>
+                    </div>
+                    <div class="size-std numberofrows" style="right: 15px; left: unset;">
+                    <% if(files[0].type_excelsrv=="0"){ %>
                         <a href="<%= baseurl() %>delivery/savepermanent/<%= files[0].id_exceldlv %>" class="myButton-gradBlueGreen">Save Permanent</a>
-                        <% } %>
-					</div>
+                    <% } %>
+                    </div>
 				</div>
 			</div>
 		</div>
@@ -206,7 +251,6 @@
                 checkbox_value += $(this).val() + "|";
             }
         });
-        alert(checkbox_value);
         $.ajax({
             type: "post",
             url: "<%= baseurl() %>delivery/deletecheckdlv/<%= files[0].id_exceldlv %>",
