update reset passeord

--- a/views/detailservice.ejs
+++ b/views/detailservice.ejs
@@ -189,7 +189,7 @@
                                     <% if(files[0].type_excelsrv=="0"){ %>
                                     <a href="<%= baseurl() %>service/edit/<%= files[0].id_excelsrv %>/<%= read.id_service %>"><img src="<%= baseurl() %>images/icon/pencil-edit.png" alt="Edit" title="Edit" width="18"></a> &nbsp;
                                     <% } %>
-                                    <a href="<%= baseurl() %>service/detail/<%= files[0].id_excelsrv %>/<%= read.id_service %>"><img src="<%= baseurl() %>images/icon/detail.png" alt="Edit" title="Edit" width="18"></a>
+                                    <a href="<%= baseurl() %>service/detail/<%= files[0].id_excelsrv %>/<%= read.id_service %>"><img src="<%= baseurl() %>images/icon/detail.png" alt="Detail" title="Detail" width="18"></a>
                                 </td>
                             </tr>
                             <% } %>
