--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
         <div class="fixMiddle loginBoxsize">
             <div class="headLogin">
                 <img src="<%= baseurl() %>images/kadence_icon.png" alt="kadence">
-                <img src="https://pngimg.com/uploads/nissan/nissan_PNG65.png" alt="NIssan">
+                <img src="<%= baseurl() %>images/nissan_icon.png" alt="NIssan">
             </div>
             <form action="<%= baseurl() %>login/auth" method="POST">
             <div class="bodyLogin">
