--- a/views/pageuser.ejs
+++ b/views/pageuser.ejs
@@ -114,7 +114,7 @@
 								<td align="center"><%= show.sales_email %></td>
 								<td align="center"><%= show.type_sales %></td>
 								<td align="center"><%= active %></td>
-								<td align="center"><a href="<%= baseurl() %>user/detail/<%= show.id_sales %>"><img src="<%= baseurl() %>images/icon/detail.png" alt="Detail" title="Detail" width="18"></a></td>
+								<td align="center"><a href="<%= baseurl() %>user/detail/<%= show.id_sales %>">View</a></td>
 							</tr>
 							<% }%>
                         </table>
@@ -122,50 +122,14 @@
 					<div class="size-std numberofrows">
 						<ul class="pagination">
 							<% 
-                            if(count>7){ 
-                                if(count==page){
-                                    var lastclass = "active"
-                                }else{
-                                    var lastclass = ""
-                                }
-                            } 
+							for(var i=1;i<=count;i++){ 
+								if(i==1){
+									var classes = "active"
+								}else{
+									var classes = ""
+								}
 							%>
-							<% if(page>=6){ %>
-                                <li class="<%= lastclass %>"><a href="<%= baseurl() %>user/?page=1"><%= 1 %></a></li>
-                                <li class="<%= classes %>"><a href="<%= baseurl() %>user/?page=<%= lastarray %>">...</a></li>
-                            <% } 
-							if(count>7){
-                                var pagelength = 7
-                            }else{
-                                var pagelength = count
-                            }
-                            var len = arrpage.length
-                            var lastarray = arrpage[6]+1
-                            for(var i=0;i < arrpage.length;i++){ 
-                                if(page==arrpage[i]){
-                                    var classes = "active"
-                                }else{
-                                    var classes = ""
-                                }
-                                if(page==0){
-                                    if(arrpage[i]==1){
-                                        var classes = "active"
-                                    }
-                                }
-							%>
-								<li class="<%= classes %>"><a href="<%= baseurl() %>user/?page=<%= arrpage[i] %>"><%= arrpage[i] %></a></li>
-							<% } 
-							if(page<=count-5 && count > 7){ %>
-								<li class="<%= classes %>"><a href="<%= baseurl() %>user/?page=<%= lastarray %>">...</a></li>
-							<% } 
-                            if(count>7){ 
-                                if(count==page){
-                                    var lastclass = "active"
-                                }else{
-                                    var lastclass = ""
-                                }
-							%>
-							<li class="<%= lastclass %>"><a href="<%= baseurl() %>user/?page=<%= count %>"><%= count %></a></li>
+								<li class="<%= classes %>"><a href="<%= baseurl() %>user/page/<%= i %>"><%= i %></a></li>
 							<% } %>
 						</ul>
 					</div>
