--- a/views/partials/actionajax.ejs
+++ b/views/partials/actionajax.ejs
@@ -1,3 +1,12 @@
+<style>
+svg {
+  width: 100px;
+  display: block;
+  margin: 40px auto 0;
+}
+  </style>
+
+<% if(alert.type=="success"){ %>
 <p>
     <div class="success-checkmark">
       <div class="check-icon">
@@ -9,5 +18,15 @@
     </div>
 </p>
 <p class="size-head2 nopad" style="color: #62b965">
-    SUCCESS
+    SUCCESS <%= alert.label %>
 </p>
+<% }else{ %>
+
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 130.2 130.2">
+  <circle class="path circle" fill="none" stroke="#D06079" stroke-width="6" stroke-miterlimit="10" cx="65.1" cy="65.1" r="62.1"/>
+  <line class="path line" fill="none" stroke="#D06079" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="34.4" y1="37.9" x2="95.8" y2="92.3"/>
+  <line class="path line" fill="none" stroke="#D06079" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="95.8" y1="38" x2="34.4" y2="92.2"/>
+</svg>
+<p class="error">Ups. Sorry<br> <%= alert.label %></p>
+
+<% } %>
