--- a/views/detailservice.ejs
+++ b/views/detailservice.ejs
@@ -175,7 +175,7 @@
 									</div>
                                 </td>
                                 <td  class="<%= class_tab %>" align="center"><%= read.id_service %></td>
-                                <td  class="<%= class_tab %>" align="center"><%= moment(read.tgl_service).format("DD/MM/YYYY") %></td>
+                                <td  class="<%= class_tab %>" align="center"><%= moment(read.tgl_uploadsrv).format("DD/MM/YYYY") %></td>
                                 <td  class="<%= class_tab %>" align="center"><%= read.id_dealer %></td>
                                 <td  class="<%= class_tab %>"><%= read.nama_stnk %></td>
                                 <td  class="<%= class_tab %>"><%= read.user_name %></td>
