--- a/views/report.ejs
+++ b/views/report.ejs
@@ -223,6 +223,7 @@
 									<th class="rotate"><div><span>Menolak untuk melanjutkan wawancara</span></div></th>
 									<th class="rotate"><div><span>Responden sedang sibuk</span></div></th>
 									<th class="rotate"><div><span>Sedang di luar negeri</span></div></th>
+									<th class="rotate"><div><span>Mailbox</span></div></th>
 									<th class="rotate"><div><span>Nomor tidak aktif</span></div></th>
 									<th class="rotate"><div><span>Tidak ada sinyal  / tidak ada nada sambung</span></div></th>
 									<th class="rotate"><div><span>Nomor telepon dialihkan</span></div></th>
