--- a/views/downloadcati.ejs
+++ b/views/downloadcati.ejs
@@ -1,9 +1,10 @@
 <table class="popupContent size-std" cellspacing="10" cellpadding="10">
     <tr>
         <td style="text-align: center; border-bottom: 1px solid #dfe8f1;">
-            
+            <a href="<%= baseurl() %>filexls/cati/<%= newfilename %>">
                 <img src="<%= baseurl() %>images/icon/download-icon.png" alt=""><br>
-            <%= result.length %> <%= data.date_from %> <%= data.date_to %>
+                <%= newfilename %>
+            </a>
         </td>
     </tr>
 </table>
