--- a/views/userdetail.ejs
+++ b/views/userdetail.ejs
@@ -82,37 +82,37 @@
 						<tr>
 							<td style="text-align: right; width: 40%;">Dealer Code</td>
 							<td>:
-                                <%= sales[0].id_dealer %>
+                                <%= dealer.id_dealer %>
 							</td>
 						</tr>
 						<tr>
 							<td style="text-align: right; width: 40%;">Dealer Name</td>
 							<td>:
-                                <%= sales[0].name_dealer %>
+                                <%= dealer.dealername %>
 							</td>
 						</tr>
 						<tr>
 							<td style="text-align: right; width: 40%;">Dealer City</td>
 							<td>:
-                                <%= sales[0].city_dealer %>
+                                <%= dealer.dealercity %>
 							</td>
 						</tr>
 						<tr>
 							<td style="text-align: right; width: 40%;">Dealer Region</td>
 							<td>:
-                                <%= sales[0].region_dealer %>
+                                <%= dealer.dealerregion %>
 							</td>
 						</tr>
 						<tr>
 							<td style="text-align: right; width: 40%;">Dealer Group</td>
 							<td>:
-                                <%= sales[0].brand_dealer %>
+                                <%= dealer.dealergroup %>
 							</td>
 						</tr>
 						<tr>
-							<td style="text-align: right; width: 40%;">Dealer Type
+							<td style="text-align: right; width: 40%;">Dealer Type</td>
 							<td>:
-                                <%= sales[0].type_dealer %>
+                                <%= dealer.dealertype %>
 							</td>
 						</tr>
 					</table>
