--- a/views/listpdf.ejs
+++ b/views/listpdf.ejs
@@ -43,8 +43,8 @@
 						</button>
 						<div class="option-box option-menu shadow half box-list-control" id="control_panel">
 							<ul class="full-length nopad">
-                                <a href=""><li class="pad-tb size-std">CSI</li></a>
-                                <a href=""><li class="pad-tb size-std">SSI</li></a>
+                                <a href="<%= baseurl() %>report/pdf/download/?panel=CSI"><li class="pad-tb size-std">CSI</li></a>
+                                <a href="<%= baseurl() %>report/pdf/download/?panel=SSI"><li class="pad-tb size-std">SSI</li></a>
 							</ul>
 						</div>
 					</div>			
