--- a/views/index.ejs
+++ b/views/index.ejs
@@ -114,6 +114,19 @@
 							</tr>
 						</table>
 					</div>
+					<div class="spccols-2 delay square btn-icon-big" style="background-color: #ffffff; border: 1px solid #d6d5d5; text-align: center;">
+						<table style="height: 100%; width: 100%; color: #959a9c;">
+							<tr>
+								<td>
+									<a href="<%= baseurl() %>report/pdf/download/">
+										<img src="<%= baseurl() %>images/icon/upload-delivery.png" alt="Upload Project" style="width: 55%; vertical-align: middle;">
+										<br><br>
+										<b>Report PDF</b>
+									</a>
+								</td>
+							</tr>
+						</table>
+					</div>
 					<% if(login.typeses=="super"){ %>
 					<div class="spccols-2 delay square btn-icon-big" style="background-color: #ffffff; border: 1px solid #d6d5d5; text-align: center;">
 						<table style="height: 100%; width: 100%; color: #959a9c;">
