--- a/views/detailservice.ejs
+++ b/views/detailservice.ejs
@@ -266,6 +266,7 @@
                 checkbox_value += $(this).val() + "|";
             }
         });
+        alert(checkbox_value)
         $.ajax({
             type: "post",
             url: "<%= baseurl() %>service/deletechecksrv/<%= files[0].id_excelsrv %>",
